[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Power Ups/Tool.gd" type="Script" id=2]
[ext_resource path="res://Power Ups/Upgrade Options.gd" type="Script" id=3]
[ext_resource path="res://Font/Louis George Cafe.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Efficiency.png" type="Texture" id=5]
[ext_resource path="res://UI/Quality.png" type="Texture" id=6]
[ext_resource path="res://UI/Progress Bar.png" type="Texture" id=7]
[ext_resource path="res://UI/Progress Bar Border.png" type="Texture" id=8]
[ext_resource path="res://Background/Coffee Bean.png" type="Texture" id=9]
[ext_resource path="res://UI/Cash.png" type="Texture" id=10]
[ext_resource path="res://UI/Increase Arrow.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=10]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 50.0

[sub_resource type="Animation" id=2]
resource_name = "Pressed"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.148115, 0.3 ),
"transitions": PoolRealArray( 1, 0.535887, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 0.757858 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -10, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 11.0

[node name="Tool" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Cost" type="Label" parent="Sprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coffee Bean" type="Sprite" parent="Sprite/Cost"]
position = Vector2( -8, 32 )
scale = Vector2( 0.309524, 0.309524 )
texture = ExtResource( 9 )

[node name="Interact Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact Area"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pressed = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Make Timer" type="Timer" parent="."]

[node name="Progress Bar" type="TextureProgress" parent="."]
visible = false
margin_left = -72.0
margin_top = 56.0
margin_right = 75.0
margin_bottom = 120.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Progress Bar"]

[node name="Debug" type="Label" parent="."]
visible = false
margin_left = -64.0
margin_top = -56.0
margin_right = 64.0
margin_bottom = -42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade Options" type="Node2D" parent="."]
position = Vector2( 88, -64 )
script = ExtResource( 3 )

[node name="Efficiency" type="Sprite" parent="Upgrade Options"]
position = Vector2( 32, 32 )
texture = ExtResource( 5 )

[node name="Efficiency" type="Area2D" parent="Upgrade Options/Efficiency"]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upgrade Options/Efficiency/Efficiency"]
position = Vector2( 8, 0 )
shape = SubResource( 4 )

[node name="Quality" type="Sprite" parent="Upgrade Options"]
position = Vector2( 32, 96 )
texture = ExtResource( 6 )

[node name="Quality" type="Area2D" parent="Upgrade Options/Quality"]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upgrade Options/Quality/Quality"]
position = Vector2( 8, 0 )
shape = SubResource( 5 )

[node name="Quantities" type="Node2D" parent="Upgrade Options"]
position = Vector2( 0, 48 )

[node name="Efficiency" type="Node2D" parent="Upgrade Options/Quantities"]
position = Vector2( 96, -48 )

[node name="E_Req" type="Label" parent="Upgrade Options/Quantities/Efficiency"]
margin_left = -3.0
margin_right = 37.0
margin_bottom = 64.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coffee Bean2" type="Sprite" parent="Upgrade Options/Quantities/Efficiency/E_Req"]
position = Vector2( -13, 32 )
scale = Vector2( 0.309524, 0.309524 )
texture = ExtResource( 9 )

[node name="Quality" type="Node2D" parent="Upgrade Options/Quantities"]
position = Vector2( -32, 14 )

[node name="Q_Req" type="Label" parent="Upgrade Options/Quantities/Quality"]
margin_left = 136.0
margin_right = 176.0
margin_bottom = 64.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cash" type="Sprite" parent="Upgrade Options/Quantities/Quality/Q_Req"]
position = Vector2( -24, 34 )
scale = Vector2( 0.309524, 0.309524 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Upgrade Options"]

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
process_material = SubResource( 11 )
texture = ExtResource( 11 )

[connection signal="input_event" from="Interact Area" to="." method="_on_Interact_Area_input_event"]
[connection signal="tween_completed" from="Progress Bar/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="input_event" from="Upgrade Options/Efficiency/Efficiency" to="Upgrade Options" method="_on_Efficiency_input_event"]
[connection signal="input_event" from="Upgrade Options/Quality/Quality" to="Upgrade Options" method="_on_Quality_input_event"]
